# MBR-GPT_parser

./: .gitignore  README.md  common.py  gpt.py  mbr.py  test.py
rust_test/: Cargo.toml
rust_test/src/: gpt.rs  main.rs  mbr.rs
