[package]
name = "rust_test"
version = "0.1.0"
authors = ["Probably Winston Churchill <nicolas.p.ammann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = "0.7.0"
capstone-sys = "0.11.0"
byteorder = "1.3.4"
bit_field = "0.10.0"
